# aegis

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  action.yml  deny.toml  docker-compose.yml  install.sh
crates/aegis-alert/: Cargo.toml
crates/aegis-alert/src/: dispatcher.rs  lib.rs  log.rs  matcher.rs  payload.rs  push.rs
crates/aegis-browser/: Cargo.toml
crates/aegis-browser/src/: cdp.rs  driver.rs  error.rs  lib.rs
crates/aegis-canvas/: Cargo.toml
crates/aegis-canvas/src/: a2ui.rs  lib.rs
crates/aegis-channel/: Cargo.toml
crates/aegis-channel/src/: access_control.rs  active_hours.rs  auto_reply.rs  broadcast_group.rs  channel.rs  channel_routing.rs  discord.rs  feishu.rs  format.rs  gmail.rs  googlechat.rs  hooks.rs  imessage.rs  irc.rs  lib.rs  line.rs  lobster.rs  matrix.rs  mattermost.rs  media_pipeline.rs  msteams.rs  multi_account.rs  nextcloud.rs  nostr.rs  polls.rs  presence.rs  runner.rs  signal.rs  tlon.rs  twitch.rs  unified.rs  voice_call.rs  voice_channel.rs  webchat.rs  webhook.rs  whatsapp.rs  zalo.rs
crates/aegis-channel/src/slack/: api.rs  blocks.rs  interactive.rs  mod.rs  oauth.rs  poller.rs
crates/aegis-channel/src/telegram/: api.rs  mod.rs  poller.rs  types.rs  webhook.rs
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: llm_call.rs  main.rs  terminal.rs  tui_utils.rs
crates/aegis-cli/src/chat_tui/: agent_loop.rs  approval.rs  commands.rs  compaction.rs  diff_preview.rs  event.rs  heartbeat.rs  hooks.rs  input.rs  insert_history.rs  markdown.rs  message.rs  mod.rs  overlay.rs  persistence.rs  render.rs  security.rs  streaming.rs  system_prompt.rs  tests.rs  tools.rs  ui.rs
crates/aegis-cli/src/commands/: alerts.rs  audit.rs  auth.rs  config.rs  daemon.rs  diff.rs  (+22 more)
crates/aegis-control/: Cargo.toml
crates/aegis-control/src/: acp_client.rs  acp_enhanced.rs  acp_server.rs  acp_translator.rs  acp_websocket.rs  alias.rs  command.rs  daemon.rs  device_management.rs  event.rs  hooks.rs  lib.rs  message_routing.rs  models.rs  open_responses.rs  openai_compat.rs  pending.rs
crates/aegis-daemon/: Cargo.toml
crates/aegis-daemon/src/: attachment_handler.rs  audio_transcription.rs  browser_profile.rs  builtin_tools.rs  capabilities.rs  capture.rs  channel_session.rs  command_queue.rs  config_persist.rs  control.rs  cron.rs  dashboard.rs  deferred_reply.rs  device_registry.rs  embeddings.rs  execution_lanes.rs  fleet.rs  heartbeat.rs  image_understanding.rs  jobs.rs  lib.rs  lifecycle.rs  link_understanding.rs  llm_client.rs  memory.rs  memory_capture.rs  memory_daily_log.rs  memory_flush.rs  memory_guard.rs  memory_hybrid_search.rs  memory_longterm.rs  memory_recall.rs  memory_tools.rs  message_routing.rs  ndjson_fmt.rs  parity.rs  persistence.rs  phone_control.rs  plugins.rs  policy_helpers.rs  (+21 more)
crates/aegis-harness/: Cargo.toml
crates/aegis-harness/src/: daemon_harness.rs  error.rs  expect.rs  fixtures.rs  key.rs  lib.rs  mocks.rs  session.rs  snapshot.rs
crates/aegis-hooks/: Cargo.toml
crates/aegis-hooks/src/: config.rs  discovery.rs  events.rs  lib.rs  manager.rs  runner.rs
crates/aegis-ledger/: Cargo.toml
crates/aegis-ledger/src/: async_pipeline.rs  channel_audit.rs  entry.rs  filter.rs  fs_audit.rs  integrity.rs  lib.rs  middleware.rs  ndjson_log.rs  parse_helpers.rs  policy_snapshot.rs  query.rs  redaction.rs  session.rs  siem_export.rs  stats.rs  store.rs  writer.rs
crates/aegis-monitor/: Cargo.toml
crates/aegis-monitor/src/: app.rs  event.rs  lib.rs  ui.rs
crates/aegis-observer/: Cargo.toml
crates/aegis-observer/src/: event.rs  lib.rs  snapshot.rs  watcher.rs
crates/aegis-pilot/: Cargo.toml
crates/aegis-pilot/examples/: pty_capture.rs
crates/aegis-pilot/src/: adapter.rs  compaction.rs  driver.rs  json_events.rs  json_stream.rs  jsonl.rs  kill_tree.rs  lib.rs  ndjson_fmt.rs  output.rs  pty.rs  session.rs  supervisor.rs  tmux.rs
crates/aegis-policy/: Cargo.toml
crates/aegis-policy/src/: builtin.rs  engine.rs  lib.rs  schema.rs
crates/aegis-probe/: Cargo.toml
crates/aegis-probe/src/: baseline.rs  compare.rs  distillation.rs  fingerprint.rs  history.rs  lib.rs  profiles.rs  registry.rs  report.rs  runner.rs  scoring.rs  stats.rs  telemetry.rs  testcase.rs  waivers.rs
crates/aegis-probe/tests/: cli_integration.rs
crates/aegis-proxy/: Cargo.toml
crates/aegis-proxy/src/: audit.rs  budget.rs  lib.rs  net.rs  pricing.rs  profiles.rs  rate_limit.rs  usage.rs
crates/aegis-sandbox/: Cargo.toml
crates/aegis-sandbox/src/: backend.rs  compiler.rs  docker.rs  injection_detector.rs  lib.rs  process.rs  profile.rs  sanitizer.rs  seatbelt.rs  skill_scanner.rs  windows_acl.rs
crates/aegis-sidecar/: Cargo.toml
crates/aegis-sidecar/src/: coordinator.rs  fs.rs  lib.rs  net.rs
crates/aegis-skills/: Cargo.toml
crates/aegis-skills/src/: conditions.rs  discovery.rs  dispatch.rs  executor.rs  hot_reload.rs  hub.rs  installer.rs  lib.rs  lifecycle.rs  manifest.rs  registry.rs  scanner.rs  sdk.rs
crates/aegis-toolkit/: Cargo.toml
crates/aegis-toolkit/src/: browser_discovery.rs  capture.rs  contract.rs  download_manager.rs  element_screenshot.rs  input.rs  lib.rs  macos_helper.rs  navigation_guard.rs  page_snapshot.rs  policy.rs  storage_manager.rs  tab_manager.rs  tui.rs  vision.rs  window.rs
crates/aegis-tts/: Cargo.toml
crates/aegis-tts/src/: auto.rs  catalog.rs  edge.rs  elevenlabs.rs  lib.rs  manager.rs  openai.rs
crates/aegis-types/: Cargo.toml
crates/aegis-types/src/: action.rs  config.rs  config_loader.rs  copilot.rs  credentials.rs  daemon.rs  error.rs  google_ai.rs  ids.rs  lib.rs  llm.rs  oauth.rs  provider_auth.rs  providers.rs  tool_classification.rs  verdict.rs
crates/aegis-voice/: Cargo.toml
crates/aegis-voice/src/: capture.rs  lib.rs  stt.rs  talk.rs  wake.rs
tests/: Cargo.toml  test_audit_ledger.rs  test_e2e.rs  test_policy_engine.rs  test_policy_ledger.rs  test_sessions.rs  test_smoke.rs
tests/common/: mod.rs
tests/fixtures/: basic_daemon.toml  deny_all.cedar
(+511 files in other folders)
