[workspace]
resolver = "2"
members = [
    "crates/aegis-types",
    "crates/aegis-policy",
    "crates/aegis-ledger",
    "crates/aegis-alert",
    "crates/aegis-sandbox",
    "crates/aegis-proxy",
    "crates/aegis-observer",
    "crates/aegis-monitor",
    "crates/aegis-cli",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["markm39 <markmiller0470@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
cedar-policy = "4"
rusqlite = { version = "0.33", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = "0.28"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
toml = "0.8"
hex = "0.4"
notify = { version = "7", features = ["macos_fsevent"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
dialoguer = "0.12"

glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
wiremock = "0.6"

# Types crate (used by all)
aegis-types = { path = "crates/aegis-types" }
aegis-policy = { path = "crates/aegis-policy" }
aegis-alert = { path = "crates/aegis-alert" }
aegis-ledger = { path = "crates/aegis-ledger" }
aegis-sandbox = { path = "crates/aegis-sandbox" }
aegis-proxy = { path = "crates/aegis-proxy" }
aegis-observer = { path = "crates/aegis-observer" }
aegis-monitor = { path = "crates/aegis-monitor" }
