[workspace]
resolver = "2"
members = [
    "crates/aegis-types",
    "crates/aegis-policy",
    "crates/aegis-ledger",
    "crates/aegis-alert",
    "crates/aegis-sandbox",
    "crates/aegis-proxy",
    "crates/aegis-observer",
    "crates/aegis-monitor",
    "crates/aegis-pilot",
    "crates/aegis-control",
    "crates/aegis-channel",
    "crates/aegis-daemon",
    "crates/aegis-cli",
    "crates/aegis-harness",
    "crates/aegis-toolkit",
    "crates/aegis-tools",
    "crates/aegis-skills",
    "crates/aegis-tts",
    "crates/aegis-voice",
    "crates/aegis-canvas",
    "crates/aegis-browser",
    "crates/aegis-hooks",
    "tests",
    # Vendored from OpenAI Codex CLI (Apache-2.0)
    "vendor/codex/apply-patch",
    "vendor/codex/file-search",
    "vendor/codex/execpolicy",
    "vendor/codex/git",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["markm39 <markmiller0470@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Zero-trust runtime for AI agents with per-file observability and Cedar policy enforcement"
homepage = "https://github.com/markm39/aegis"
repository = "https://github.com/markm39/aegis"
readme = "README.md"
keywords = ["ai-agents", "sandbox", "security", "audit", "cedar"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"

[workspace.dependencies]
cedar-policy = "4"
rusqlite = { version = "0.33", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = "0.28"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
toml = "0.8"
serde_yaml = "0.9"
hex = "0.4"
notify = { version = "7", features = ["macos_fsevent"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
dialoguer = "0.12"

glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "blocking"] }
wiremock = "0.6"
tungstenite = "0.21"
url = "2"

# Types crate (used by all)
aegis-types = { path = "crates/aegis-types" }
aegis-policy = { path = "crates/aegis-policy" }
aegis-alert = { path = "crates/aegis-alert" }
aegis-ledger = { path = "crates/aegis-ledger" }
aegis-sandbox = { path = "crates/aegis-sandbox" }
aegis-proxy = { path = "crates/aegis-proxy" }
aegis-observer = { path = "crates/aegis-observer" }
aegis-monitor = { path = "crates/aegis-monitor" }
aegis-pilot = { path = "crates/aegis-pilot" }
aegis-control = { path = "crates/aegis-control" }
aegis-channel = { path = "crates/aegis-channel" }
aegis-daemon = { path = "crates/aegis-daemon" }
aegis-toolkit = { path = "crates/aegis-toolkit" }
aegis-tools = { path = "crates/aegis-tools" }
aegis-skills = { path = "crates/aegis-skills" }
aegis-tts = { path = "crates/aegis-tts" }
aegis-voice = { path = "crates/aegis-voice" }
aegis-canvas = { path = "crates/aegis-canvas" }
aegis-browser = { path = "crates/aegis-browser" }
aegis-hooks = { path = "crates/aegis-hooks" }

async-trait = "0.1"
tokio-tungstenite = "0.26"
futures-util = "0.3"

axum = { version = "0.8", features = ["json", "ws"] }
subtle = "2"
nix = { version = "0.29", features = ["fs", "process", "term", "poll", "signal"] }
libc = "0.2"
regex = "1"
chrono-tz = "0.10"
vt100 = "0.15"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["std"] }
pdf-extract = "0.7"

# Orchestrator computer-use toolkit
