[workspace]
resolver = "2"
members = [
    "crates/aegis-types",
    "crates/aegis-policy",
    "crates/aegis-ledger",
    "crates/aegis-alert",
    "crates/aegis-sandbox",
    "crates/aegis-observer",
    "crates/aegis-pilot",
    "crates/aegis-harness",
    "crates/aegis-probe",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["markm39 <markmiller0470@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "AI agent security testing: adversarial probes for coding agents"
homepage = "https://github.com/markm39/aegis"
repository = "https://github.com/markm39/aegis"
readme = "README.md"
keywords = ["ai-security", "red-team", "agent-testing", "adversarial", "security"]
categories = ["development-tools::testing"]
rust-version = "1.89"

[workspace.dependencies]
cedar-policy = "4"
rusqlite = { version = "0.33", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
toml = "0.8"
hex = "0.4"
notify = { version = "8.2", features = ["macos_fsevent"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "blocking"] }
wiremock = "0.6"
url = "2"

# Workspace crate paths
aegis-types = { path = "crates/aegis-types" }
aegis-policy = { path = "crates/aegis-policy" }
aegis-alert = { path = "crates/aegis-alert" }
aegis-ledger = { path = "crates/aegis-ledger" }
aegis-sandbox = { path = "crates/aegis-sandbox" }
aegis-observer = { path = "crates/aegis-observer" }
aegis-pilot = { path = "crates/aegis-pilot" }
aegis-harness = { path = "crates/aegis-harness" }

memmap2 = "0.9"
nix = { version = "0.29", features = ["fs", "process", "term", "poll", "signal"] }
libc = "0.2"
regex = "1"
vt100 = "0.15"
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"

# Release optimizations
[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
