[package]
name = "aegis-browser"
version.workspace = true
edition.workspace = true
description = "CDP (Chrome DevTools Protocol) browser driver for Aegis"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
