[package]
name = "aegis-channel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aegis-types = { workspace = true }
aegis-alert = { workspace = true }
aegis-control = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
wiremock = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
