[package]
name = "aegis-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-types = { workspace = true }
aegis-policy = { workspace = true }
aegis-ledger = { workspace = true }
aegis-sandbox = { workspace = true }
aegis-proxy = { workspace = true }
aegis-observer = { workspace = true }
aegis-monitor = { workspace = true }
aegis-alert = { workspace = true }
aegis-pilot = { workspace = true }
aegis-control = { workspace = true }
aegis-channel = { workspace = true }
aegis-daemon = { workspace = true }
aegis-toolkit = { workspace = true }
aegis-skills = { workspace = true }
rusqlite = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
cedar-policy = { workspace = true }
tempfile = { workspace = true }
dialoguer = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
ctrlc = "3"
libc = "0.2"
