[package]
name = "aegis-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aegis-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = { workspace = true }
