[package]
name = "aegis-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aegis-types = { workspace = true }
aegis-toolkit = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
