[package]
name = "aegis-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aegis-types = { workspace = true }
aegis-pilot = { workspace = true }
aegis-policy = { path = "../aegis-policy" }
aegis-ledger = { path = "../aegis-ledger" }
aegis-observer = { path = "../aegis-observer" }
aegis-control = { path = "../aegis-control" }
aegis-alert = { path = "../aegis-alert" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
