[package]
name = "aegis-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aegis-types = { workspace = true }
aegis-pilot = { workspace = true }
aegis-policy = { path = "../aegis-policy" }
aegis-ledger = { path = "../aegis-ledger" }
aegis-observer = { path = "../aegis-observer" }
aegis-control = { path = "../aegis-control" }
aegis-toolkit = { workspace = true }
aegis-alert = { path = "../aegis-alert" }
aegis-channel = { path = "../aegis-channel" }
aegis-proxy = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
tungstenite = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
