[package]
name = "aegis-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aegis-types = { workspace = true }
aegis-pilot = { workspace = true }
aegis-policy = { path = "../aegis-policy" }
aegis-ledger = { path = "../aegis-ledger" }
aegis-observer = { path = "../aegis-observer" }
aegis-control = { path = "../aegis-control" }
aegis-toolkit = { workspace = true }
aegis-alert = { path = "../aegis-alert" }
aegis-channel = { path = "../aegis-channel" }
aegis-proxy = { workspace = true }
aegis-sandbox = { workspace = true }
aegis-tools = { workspace = true }
aegis-apply-patch = { path = "../../vendor/codex/apply-patch" }
aegis-file-search = { path = "../../vendor/codex/file-search" }
aegis-execpolicy = { path = "../../vendor/codex/execpolicy" }

async-trait = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true }
tungstenite = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
subtle = { workspace = true }
hex = { workspace = true }
qrcode = "0.14"
glob = { workspace = true }
shlex = "1"
pdf-extract = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
