[package]
name = "aegis-harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PTY-based terminal test harness primitives for agent probing"

[dependencies]
aegis-pilot = { path = "../aegis-pilot" }
aegis-types = { workspace = true }
vt100 = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
