[package]
name = "aegis-hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "User-extensible hook modules for Aegis agent supervision"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
glob = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
