[package]
name = "aegis-ledger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aegis-types = { workspace = true }
aegis-alert = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
