[package]
name = "aegis-observer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aegis-types = { workspace = true }
aegis-policy = { workspace = true }
aegis-ledger = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
