[package]
name = "aegis-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aegis-types = { workspace = true }
aegis-policy = { workspace = true }
aegis-ledger = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
