[package]
name = "aegis-sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aegis-types = { workspace = true }
aegis-policy = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
