[package]
name = "aegis-toolkit"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }

[features]
default = []
macos = []
